syntax = "proto3";

package program01;

import "google/protobuf/empty.proto";

option java_package = "com.partha.program01";
option java_multiple_files = true;

message BalanceCheckRequest{
  int32 account_number=1;
}

message AccountBalance {
  int32  account_number=1;
  int32 balance=2;
}

message AllAccountsResponse{
  repeated AccountBalance accounts=1;
}

message WithdrawRequest{
  int32 account_number=1;
  int32 amount=2;
}

message Money{
  int32 amount=1;
}

service BankService{
  //unary
  rpc GetAccountBalance(BalanceCheckRequest) returns (AccountBalance);
  rpc GetAllAccounts(google.protobuf.Empty) returns (AllAccountsResponse);

  //server streaming
  rpc Withdraw(WithdrawRequest) returns (stream Money);
}